# infra-diagrams

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
the_startup/: custom_cluster.py  diagram.py
the_startup/database/: db_mysql.py
the_startup/network/: private.py  public.py
the_startup/services/external_customer/: manager.py  resident.py  worker.py
the_startup/services/internal_customer/: general.py
the_startup/storage/s3/: buckets.py
