[tool.poetry]
name = "cloud-diagrams"
version = "0.1.0"
description = ""
authors = ["marcos <marcos.r.grave@gmail.com>"]
readme = "README.md"
packages = [{include = "cloud_diagrams"}]

[tool.poetry.dependencies]
python = "^3.10"
diagrams = "^0.23.3"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
